# HasTEE

./: .gitmodules  BUILD.bazel  EnclaveIFC.cabal  README.md  WORKSPACE  cabal.project  init.sh  package.yaml  test_main.hs
.devcontainer/: Dockerfile  devcontainer.json
app/: Main.hs
src/: Enclave.hs
